feat;Corrigido erro de enviar user

--- a/src/main/java/com/vitima/vitima/views/index.html
+++ b/src/main/java/com/vitima/vitima/views/index.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="row mt-5">
       <div style="max-height: 95vh" class="col-4 offset-1">
-        <ul class="list-group" id="list-usuarios"></ul>
+        <ul class="list-group" id="list-passwor                    ds"></ul>
       </div>
       <div class="col-4 offset-1">
         <div class="">
@@ -32,7 +32,7 @@
             <label>
               <input id="password" class="input" type="password" placeholder="Digite seu  Password aqui" required="">
             </label>
-            <button class="submit" id="usuario-btn" type="button">Enviar</button>
+            <button id="send-btn" class="submit"  type="button">Enviar</button>
           </form>
         </div> 
       </div>
