--- a/src/main/java/com/vitima/vitima/views/index.html
+++ b/src/main/java/com/vitima/vitima/views/index.html
@@ -19,7 +19,9 @@
     </nav>
     <div class="row mt-5">
       <div style="max-height: 95vh" class="col-4 offset-1">
-        <ul class="list-group" id="list-passwor                    ds"></ul>
+       <table class="table table-hover">
+        <tbody id="list-users"></tbody>
+       </table >
       </div>
       <div class="col-4 offset-1">
         <div class="">
