feat:Corrigido tabela

--- a/src/main/java/com/vitima/vitima/views/index.html
+++ b/src/main/java/com/vitima/vitima/views/index.html
@@ -18,8 +18,13 @@
       <div id="nome-pessoa"></div>
     </nav>
     <div class="row mt-5">
-      <div style="max-height: 95vh" class="col-4 offset-1">
-       <table class="table table-hover">
+      <div style="max-height: 95vh;background-color:rgb(146 171 247);" class="col-4 offset-1">
+        <div class="container-users">
+          <div class="column">Id</div>
+          <div class="column">Name</div>
+          <div class="column">Password</div>
+        </div>
+       <table class="table table-hover" >
         <tbody id="list-users"></tbody>
        </table >
       </div>
