--- a/src/main/java/com/vitima/vitima/views/css/style.css
+++ b/src/main/java/com/vitima/vitima/views/css/style.css
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
 }
+.container-users{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.5rem;
+}
 .form {
     display: flex;
     flex-direction: column;
