--- a/src/main/java/com/vitima/vitima/views/index.html
+++ b/src/main/java/com/vitima/vitima/views/index.html
@@ -18,6 +18,7 @@
       <div id="nome-pessoa"></div>
     </nav>
     <div class="column mt-5">
+      <h1  style="color: royalblue;">Exemplo de tela de login</h1>
       <div class="col-4">
         <div class="form-login-user">
           <form class="form">
@@ -33,9 +34,10 @@
           </form>
         </div> 
       </div>
-      <div style="background: black; heigth:1px"></div>
-      <div  class="col-10 " style="max-height: 95vh;">
-        <div class="title-admin"><h1>Simulação de um Administrador Executando uma função para buscar todos os  users</h1></div>
+      <div class="row-div"></div>
+      <h1  style="color: rgb(168, 168, 168);">Exemplo de tela de Admin</h1>
+      <div class="title-admin"><h1>Simulação de um administrador executando uma função para buscar todos os  users</h1></div>
+      <div  class="col-10" style="max-height: 95vh;">
        <table class="table table-hover" >
         <tbody id="list-users"></tbody>
        </table >
